--- a/springboot-config/src/main/resources/application.yml
+++ b/springboot-config/src/main/resources/application.yml
@@ -1,9 +1,4 @@
-my:
-  name: yp
-  age: 25
-#  配置文件中用到了${random},它可以用来生成不同类型的随机值。
-  number: ${random.int}
-  uuid: ${random.uuid}
-  max: ${random.int(10)}
-  value: ${random.value}
-  greeting: hi,I'm ${my.name}
+#选择开发环境
+spring:
+  profiles:
+    active: dev
